--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="small_welcome_text">Belanja plastik terlengkap dan termurah\nMelayani partai besar dan kecil</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="transaction_fragment_title">Pilih nama pelanggan / toko.\nJika belum terdaftar, tambahkan data dengan klik +</string>
 </resources>
