--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="transaction_fragment_title">Pilih nama pelanggan / toko.\nJika belum terdaftar, tambahkan data dengan klik +</string>
-    <string name="price_format">Rp. %,.0f</string>
+    <string name="price_format">Rp%,.0f</string>
 </resources>
